--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -102,18 +102,11 @@ div {
 
 /* END LAYOUT */
 
-.response-page {
+.challenge-large-display {
   .clue {
     clear: both;
     padding-top: 30px;
     margin-bottom: 30px;
-  }
-
-  .title {
-    text-align: center;
-    font-size: 22px;
-    padding-bottom: 10px;
-    margin-top: 20px;
   }
 
   .image-one {
@@ -136,28 +129,6 @@ div {
     clear: both;
   }
 
-  .teaser-challenges {
-    margin-top: 40px;
-
-    .challenge {
-      float: left;
-      border: 1px solid #ddd;
-      margin-right: 47px;
-    }
-
-    .challenge:last-child {
-      margin-right: 0;
-    }
-
-    .image-one {
-      float: left;
-    }
-
-    .image-two {
-      float: left;
-    }
-  }
-
   form.user_new {
     padding-top: 20px;
     display: block;
@@ -176,3 +147,26 @@ div {
 
 
 }
+
+.teaser-challenges {
+  margin-top: 40px;
+
+  .challenge {
+    float: left;
+    border: 1px solid #ddd;
+    margin-right: 47px;
+  }
+
+  .challenge:last-child {
+    margin-right: 0;
+  }
+
+  .image-one {
+    float: left;
+  }
+
+  .image-two {
+    float: left;
+  }
+}
+
