--- a/app/views/challenges/_form.html.erb
+++ b/app/views/challenges/_form.html.erb
@@ -11,10 +11,6 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :email, "Friends email" %><br />
-    <%= f.text_field :email %>
-  </div>
 
   <div class="field">
     <%= f.label :image_1_id, "Image one" %><br />
@@ -27,11 +23,15 @@
   </div>
 
   <div class="field">
-    <%= f.label :clue %><br />
-    <%= f.text_area :clue %>
+    <%= f.text_field :answer, :placeholder => "Enter the answer" %>
+  </div>
+
+  <div class="field">
+    <%= f.label :email, "Challenge" %><br />
+    <%= f.email_field :email, :placeholder => "your@friend.com" %>
   </div>
 
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Send" %>
   </div>
 <% end %>
