--- a/app/views/challenges/_form.html.erb
+++ b/app/views/challenges/_form.html.erb
@@ -22,6 +22,10 @@
     <%= f.collection_select :image_2_id, Image.all, :id, :name %>
   </div>
 
+  <div style="margin: 20px 0">
+    <%= link_to "add an image", new_image_path %>
+  </div>
+
   <div class="field">
     <%= f.text_field :answer, :placeholder => "Enter the answer" %>
   </div>
