add name field to image form - should have been added ages ago

--- a/app/views/images/_form.html.erb
+++ b/app/views/images/_form.html.erb
@@ -16,6 +16,11 @@
     <%= f.file_field :image %>
   </div>
 
+  <div class="field">
+    <%= f.label :name %>
+    <%= f.text_field :name %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
