--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -17,7 +17,9 @@
 
     <div class="field"><%= f.password_field :password, :placeholder => "password", :autocomplete => "off" %></div>
 
-    <div><%= f.submit "Play" %></div>
+    <div>
+      <%= image_submit_tag "buttons/btn_play.png" %>
+    </div>
   <% end %>
 
 </div>
