--- a/app/views/responses/new.html.erb
+++ b/app/views/responses/new.html.erb
@@ -1,5 +1,9 @@
 <div class="response-page">
 
+  <div style="text-align: center">
+    <%= image_tag "your_challenge.png" %>
+  </div>
+
   <%= render :partial => "challenges/larger_display", :locals => { :challenge => @challenge } %>
 
   <div class="clear">&nbsp;</div>
