--- a/app/views/challenges/_form.html.erb
+++ b/app/views/challenges/_form.html.erb
@@ -23,7 +23,7 @@
   </div>
 
   <div style="margin: 20px 0">
-    <%= link_to "add an image", new_image_path %>
+    <%= link_to image_tag("buttons/btn_file.png"), new_image_path %>
   </div>
 
   <div class="field">
@@ -36,6 +36,6 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Send" %>
+    <%= image_submit_tag "buttons/btn_send.png" %>
   </div>
 <% end %>
