--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,7 +9,7 @@
   <div><%= f.label :password %><br />
   <%= f.password_field :password %></div>
 
-  <div><%= f.submit "Sign up" %></div>
+  <div><%= image_submit_tag "buttons/btn_play.png" %></div>
 <% end %>
 
 <%= render :partial => "devise/shared/links" %>
