--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,15 +12,15 @@
 
     <div class="header">
       <div class="title">
-        <%= link_to "THE IMPOSSIBLE MISSION FORCE PWNS YOUR SOUL", root_url %>
+
+        <%= link_to image_tag("title.png", :width => 800), root_url %>
 
       </div>
       <div class="nav">
         <% if user_signed_in? %>
-          <%= link_to "Log out", destroy_user_session_path, :method => :delete %>
+          <%= link_to image_tag("buttons/btn_logout.png"), destroy_user_session_path, :method => :delete %>
         <%else  %>
-          <%= link_to "Log in", new_user_session_path %> |
-          <%= link_to "Sign up", new_user_registration_path %>
+          <%= link_to image_tag("buttons/btn_login.png"), new_user_session_path %>
         <% end %>
       </div>
     </div>
