add points counter

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -108,6 +108,13 @@ h3 {
       margin-right: 40px;
     }
   }
+
+  .points-counter {
+    text-align: right;
+    padding-top: 20px;
+    padding-right: 40px;
+    font-size: 20px;
+  }
 }
 
 /* END LAYOUT */
