--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,14 @@
           <%= link_to image_tag("buttons/btn_login.png"), new_user_session_path %>
         <% end %>
       </div>
+
+      <% if user_signed_in? %>
+        <div class="clear">&nbsp;</div>
+
+        <div class="points-counter">
+          Points: <%= current_user.points %>
+        </div>
+      <% end %>
     </div>
 
     <% if flash[:notice] %>
