use a crazy 8bit font for headings

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -78,6 +78,7 @@ div {
 h1,
 h2,
 h3 {
+  font-family: 'Press Start 2P', cursive;
   margin-top: 10px;
   margin-bottom: 10px;
 }
@@ -113,7 +114,8 @@ h3 {
     text-align: right;
     padding-top: 20px;
     padding-right: 40px;
-    font-size: 20px;
+    font-size: 16px;
+    font-family: 'Press Start 2P', cursive;
   }
 }
 
@@ -150,6 +152,7 @@ h3 {
 .home-page {
 
   .teaser-text {
+    font-family: 'Press Start 2P', cursive;
     text-align: center;
     font-size: 28px;
     font-weight: bold;
