more 8 bit font styles

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -39,6 +39,7 @@ div {
   margin: 20px 0;
   color: green;
   font-size: 16px;
+  font-family: 'Press Start 2P', cursive;
 }
 
 .field_with_errors {
