--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Website</title>
+  <title>Impossible Mission Force is The Ultimate Game! OMG!!?!1</title>
   <%= stylesheet_link_tag    "application" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
@@ -33,6 +33,9 @@
           Points: <%= current_user.points %>
         </div>
       <% end %>
+
+      <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://imf.playmob.com">Tweet</a>
+      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
     </div>
 
     <% if flash[:notice] %>
