make the challenge border louder

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -185,7 +185,7 @@ h3 {
 
   .challenge {
     float: left;
-    border: 1px solid #ddd;
+    border: 2px solid orange;
     margin-right: 47px;
   }
 
