--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -209,3 +209,18 @@ h3 {
   margin-bottom: 50px;
   text-align: center;
 }
+
+.chosen-images {
+  padding-top: 50px;
+  padding-left: 280px;
+  margin-bottom: 40px;
+
+  .image-one,
+  .image-two {
+    float: left;
+    height: 150px;
+    width: 150px;
+    border: 2px dotted orange;
+    margin-right: 20px;
+  }
+}
