--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -33,4 +33,4 @@
 <br />
 <br />
 
-<%= link_to image_tag("buttons/btn_rest.png", :height => 100), challenges_path %>
+<%= link_to image_tag("buttons/btn_rest.png"), challenges_path %>
