--- a/app/views/leaderboard/show.html.erb
+++ b/app/views/leaderboard/show.html.erb
@@ -12,7 +12,7 @@
 
     <% @users.each do |user| %>
       <tr>
-        <td><%= user.email %></td>
+        <td><%= user.leaderboard_email %></td>
         <td><%= user.points %></td>
       </tr>
     <% end %>
