add leaderboard button/link

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,7 @@
         <%else  %>
           <%= link_to image_tag("buttons/btn_login.png"), new_user_session_path %>
         <% end %>
+        <%= link_to image_tag("buttons/btn_scoreboard.png"), leaderboard_path %>
       </div>
 
       <div class="clear">&nbsp;</div>
