--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -19,13 +19,14 @@ pre {
 }
 
 a {
+  display: inline-block;
   color: #000;
   &:visited {
     color: #666;
   }
   &:hover {
     color: #fff;
-    background-color: #000;
+    background-color: magenta;
   }
 }
 
