--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
     <div class="header">
       <div class="title">
 
-        <%= link_to image_tag("title.png", :width => 800), root_url %>
+        <%= link_to image_tag("title.png"), root_url %>
 
       </div>
       <div class="nav">
