minor fix to the home page teasers

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -186,7 +186,7 @@ h3 {
   margin-top: 40px;
 
   .challenge {
-    float: left;
+    display: inline-block;
     border: 2px solid orange;
     margin-right: 47px;
   }
