simplify the signup/login process for users
* use the same for on the home page to sign up and login
* display errors above the form instead of taking the user to another
  page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,15 +11,14 @@
   <div class="teaser-text">CAN YOU FIGURE IT OUT?</div>
 
 
-  <%= form_for(@user, :as => :user, :url => registration_path(@user)) do |f| %>
+  <%= form_for @user, :url => signup_login_path do |f| %>
+    <div class="field"><%= f.email_field :email, :placeholder => "you@yours.com", :autocomplete => "off", :required => true %></div>
 
-    <div class="field"><%= f.email_field :email, :value => params[:email] || nil, :placeholder => "you@yours.com", :autocomplete => "off" %></div>
-
-    <div class="field"><%= f.password_field :password, :placeholder => "password", :autocomplete => "off" %></div>
+    <div class="field"><%= f.password_field :password, :placeholder => "password", :autocomplete => "off", :required => true %></div>
 
     <div>
       <%= image_submit_tag "buttons/btn_play.png" %>
     </div>
-  <% end %>
 
+  <% end %>
 </div>
