add a "guess" button to the response page

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -249,3 +249,15 @@ h3 {
 input {
   font-size: 18px !important;
 }
+
+.response-page {
+  .answer-field {
+    text-align: center;
+  }
+
+  .buttons {
+    text-align: center;
+    margin-top: 20px
+  }
+
+}
