rearrange the response show page slightly
put the 'add your own challenge' under the 'next challenge' link in
smaller font

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -284,5 +284,10 @@ input {
     padding-top: 90px;
     float: left;
     font-size: 28px;
+
+    .add-your-own {
+      padding-top: 40px;
+      font-size: 10px;
+    }
   }
 }
