make a cosmetic update to the challenge form
add some space and text around the "add image" button

--- a/app/views/challenges/_form.html.erb
+++ b/app/views/challenges/_form.html.erb
@@ -31,10 +31,14 @@
     <% end %>
   </div>
 
+  <hr />
 
-  <div style="margin: 20px 0">
+  <div style="margin: 40px 0">
+    <p>Can't find an image that doesn't <i>SUCK</i>?! Add your own!</p>
     <%= link_to image_tag("buttons/btn_file.png"), new_image_path %>
   </div>
+
+  <hr />
 
   <div class="field">
     <%= f.text_field :answer, :placeholder => "Enter the answer" %>
