--- a/app/views/challenge_mailer/challenge.text.erb
+++ b/app/views/challenge_mailer/challenge.text.erb
@@ -1,3 +1,3 @@
 You have a challenge from the IMPOSSIBLE MISSION FORCE!
 
-Go here to answer it! http://imf.playmob.com<%= root_path(:challenge_id => @challenge.id, :email => @challenge.email) %>
+Go here to answer it! http://imf.playmob.com<%= root_path(:challenge_id => @challenge.id, :email => @email) %>
