--- a/app/views/vowel_purchases/new.html.erb
+++ b/app/views/vowel_purchases/new.html.erb
@@ -12,9 +12,18 @@
   Want more info on the UNICEF survival packs? <%= link_to "click here!", "https://secure3.convio.net/uncfca/site/SPageServer?pagename=FAQS_EN&JServSessionIdr004=b8uqhwvur1.app339a" %>
 </h3>
 
-
-<%= form_tag vowel_purchases_path(:resp_id => @resp.id) do %>
-  <div style="text-align: center">
-    <%= image_submit_tag "buttons/btn_buy.png" %>
-  </div>
-<% end %>
+<div class="google-checkout-wrapper">
+  <form action="https://checkout.google.com/api/checkout/v2/checkoutForm/Merchant/126794903651866" class="BB_BuyButtonForm" id="BB_BuyButtonForm" method="post" name="BB_BuyButtonForm" target="_top">
+      <input name="item_name_1" type="hidden" value="Vowels"/>
+      <input name="item_description_1" type="hidden" value="The vowels for puzzle x"/>
+      <input name="item_quantity_1" type="hidden" value="1"/>
+      <input name="item_price_1" type="hidden" value="0.01"/>
+      <input name="item_currency_1" type="hidden" value="GBP"/>
+      <input name="shopping-cart.items.item-1.digital-content.description" type="hidden" value="Click the link above to go back and attempt the challenge with the vowels filled in!"/>
+      <input name="shopping-cart.items.item-1.digital-content.key" type="hidden" value="NIPU3nLWVFUppDSjGY1SgxQTAzKl7nBkdRCRZQ0TFpQ="/>
+      <input name="shopping-cart.items.item-1.digital-content.key.is-encrypted" type="hidden" value="true"/>
+      <input name="shopping-cart.items.item-1.digital-content.url" type="hidden" value="<%= new_vowel_purchase_url(:unlock_token => @resp.unlock_token, :resp_id => @resp.id) %>"/>
+      <input name="_charset_" type="hidden" value="utf-8"/>
+      <input alt="" src="https://checkout.google.com/buttons/buy.gif?merchant_id=126794903651866&amp;w=117&amp;h=48&amp;style=white&amp;variant=text&amp;loc=en_US" type="image"/>
+  </form>
+</div>
