add footer with contact us link

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -123,6 +123,16 @@ h3 {
   }
 }
 
+.footer {
+  padding-top: 30px;
+  text-align: center;
+  a {
+    color: gray;
+    font-size: 8px;
+    text-decoration: none;
+  }
+}
+
 /* END LAYOUT */
 
 .challenge-larger-display {
