scale the new challenge create/next buttons
this should have been done a couple of commits ago - i failed

--- a/app/views/responses/show.html.erb
+++ b/app/views/responses/show.html.erb
@@ -21,8 +21,8 @@
   <div style="padding: 40px 0">
 
     <div class="options">
-      <%= link_to image_tag("buttons/btn_next_puzzle.png", :width => 100), new_challenge_response_path(current_user.next_challenge) %> &rarr; <br />
-      <%= link_to image_tag("buttons/btn_create_puzzle.png", :width => 100), new_challenge_path, :class => "add-your-own" %> <br />
+      <%= link_to image_tag("buttons/btn_next_puzzle.png"), new_challenge_response_path(current_user.next_challenge) %> &rarr; <br />
+      <%= link_to image_tag("buttons/btn_create_puzzle.png"), new_challenge_path, :class => "add-your-own" %> <br />
     </div>
 
     <div class="challenge">
