update the new challenge page instructions
closes #6

--- a/app/views/challenges/_form.html.erb
+++ b/app/views/challenges/_form.html.erb
@@ -12,7 +12,7 @@
   <% end %>
 
 
-  <h2>Choose two images from below!</h2>
+  <p class="instructions">Choose 2 images from the bank below, add the answer these images represent, then send it on to a friend to pwn</p>
 
   <div class="chosen-images">
     <div id="image-one" class="image-one">&nbsp;</div>
