--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -69,7 +69,7 @@ div {
   }
   ul li {
     font-size: 12px;
-    list-style: square;
+    list-style: none;
   }
 }
 
@@ -224,21 +224,6 @@ h3 {
   text-align: center;
 }
 
-.chosen-images {
-  padding-top: 50px;
-  padding-left: 280px;
-  margin-bottom: 40px;
-
-  .image-one,
-  .image-two {
-    float: left;
-    height: 150px;
-    width: 150px;
-    border: 2px dotted orange;
-    margin-right: 20px;
-  }
-}
-
 .challenge-list {
   padding-left: 340px;
 
@@ -328,6 +313,38 @@ div.google-checkout-wrapper {
   text-align: center;
 }
 
-.instructions {
-  font-size: 14px;
+.new-challenge-page {
+  .instructions {
+    font-size: 14px;
+  }
+
+  .chosen-images {
+    padding-top: 50px;
+    padding-left: 400px;
+    margin-bottom: 40px;
+
+    .image-one,
+    .image-two {
+      float: left;
+      text-align: center;
+      height: 80px;
+      width: 80px;
+      border: 2px dotted orange;
+      margin-right: 20px;
+    }
+  }
+
+  .image-selection-box {
+
+    width: 100%;
+    height: 300px;
+    overflow-y: scroll;
+
+    .image-wrapper {
+      width: 90px;
+      height: 90px;
+      text-align: center;
+      float: left;
+    }
+  }
 }
