--- a/app/views/challenges/_form.html.erb
+++ b/app/views/challenges/_form.html.erb
@@ -1,55 +1,66 @@
-<%= form_for(@challenge) do |f| %>
-  <% if @challenge.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@challenge.errors.count, "error") %> prohibited this challenge from being saved:</h2>
+<div class="new-challenge-page">
+    <% if @challenge.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= pluralize(@challenge.errors.count, "error") %> prohibited this challenge from being saved:</h2>
 
-      <ul>
-      <% @challenge.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
+        <ul>
+        <% @challenge.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+        </ul>
+      </div>
+    <% end %>
+
+    <p class="instructions">Choose 2 images from the bank below, add the answer these images represent, then send it on to a friend to pwn</p>
+
+    <div class="chosen-images">
+      <div id="image-one" class="image-one">&nbsp;</div>
+      <div id="image-two" class="image-two">&nbsp;</div>
+      <div class="clear">&nbsp;</div>
+    </div>
+
+
+    <div class="image-selection-box">
+      <% Image.all.each do |image| %>
+        <div class="image-wrapper">
+          <%= link_to_function image_tag(image.image(:new_challenge_form)), "update_chosen_image(this)", :id => "image-#{image.id}" %>
+        </div>
       <% end %>
-      </ul>
+      <div class="clear">&nbsp;</div>
+    </div>
+
+    <div class="clear">&nbsp;</div>
+
+    <hr />
+
+    <div id="image-prompter" style="margin: 60px 0; height: 100px;">
+      <p>Can't find an image that doesn't <i>SUCK</i>?! Add your own!</p>
+      <%= link_to_function image_tag("buttons/btn_file.png"), "$('#image-form').show(); $('#image-prompter').hide()" %>
+
+    </div>
+
+    <div id="image-form" style="display: none; height: 100px; margin: 60px 0">
+      <%= render :partial => "images/form" %>
+    </div>
+
+    <hr />
+
+  <%= form_for(@challenge) do |f| %>
+    <%= f.hidden_field :image_1_id %>
+    <%= f.hidden_field :image_2_id %>
+
+
+    <div class="field">
+      <%= f.text_field :answer, :placeholder => "Enter the answer" %>
+    </div>
+
+    <div class="field">
+      <%= f.label :email, "Challenge" %><br />
+      <%= f.email_field :email, :placeholder => "your@friend.com" %>
+    </div>
+
+    <div class="actions">
+      <%= image_submit_tag "buttons/btn_send.png" %>
     </div>
   <% end %>
-
-
-  <p class="instructions">Choose 2 images from the bank below, add the answer these images represent, then send it on to a friend to pwn</p>
-
-  <div class="chosen-images">
-    <div id="image-one" class="image-one">&nbsp;</div>
-    <div id="image-two" class="image-two">&nbsp;</div>
-    <div class="clear">&nbsp;</div>
-  </div>
-
-
-  <%= f.hidden_field :image_1_id %>
-  <%= f.hidden_field :image_2_id %>
-
-  <div class="image-selection-box">
-    <% Image.all.each do |image| %>
-      <%= link_to_function image_tag(image.image(:home_page)),
-                           "update_chosen_image(this)", :id => "image-#{image.id}" %>
-    <% end %>
-  </div>
-
-  <hr />
-
-  <div style="margin: 40px 0">
-    <p>Can't find an image that doesn't <i>SUCK</i>?! Add your own!</p>
-    <%= link_to image_tag("buttons/btn_file.png"), new_image_path %>
-  </div>
-
-  <hr />
-
-  <div class="field">
-    <%= f.text_field :answer, :placeholder => "Enter the answer" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :email, "Challenge" %><br />
-    <%= f.email_field :email, :placeholder => "your@friend.com" %>
-  </div>
-
-  <div class="actions">
-    <%= image_submit_tag "buttons/btn_send.png" %>
-  </div>
-<% end %>
+</div>
