--- a/app/views/images/_form.html.erb
+++ b/app/views/images/_form.html.erb
@@ -13,12 +13,12 @@
 
   <div class="field">
     <%= f.label :image %>
-    <%= f.file_field :image %>
+    <%= f.file_field :image, :required => true %>
   </div>
 
   <div class="field">
     <%= f.label :name %>
-    <%= f.text_field :name %>
+    <%= f.text_field :name, :required => true %>
   </div>
 
   <div class="actions">
